Web Inspector: FileSystem tree should hide uninitialized FileSystem https://bugs.webkit.org/show_bug.cgi?id=88602

Patch by Taiju Tsuiki <tzik@chromium.org> on 2012-06-19
Reviewed by Vsevolod Vlasov.

Source/WebCore:

Test: http/tests/inspector/filesystem/get-filesystem-root.html

* inspector/Inspector.json:
* inspector/InspectorFileSystemAgent.cpp:
(WebCore):
(WebCore::InspectorFileSystemAgent::getFileSystemRoot):
* inspector/InspectorFileSystemAgent.h:
(InspectorFileSystemAgent):
* inspector/front-end/FileSystemModel.js:
(WebInspector.FileSystemModel.prototype._originAdded):
(WebInspector.FileSystemModel.prototype.refreshFileSystemList):
(WebInspector.FileSystemModel.prototype._gotFileSystem):
(WebInspector.FileSystemModel.FileSystem):
(WebInspector.FileSystemRequestManager):
(WebInspector.FileSystemRequestManager.prototype.getFileSystemRoot):
(WebInspector.FileSystemRequestManager.prototype._gotFileSystemRoot):
(WebInspector.FileSystemDispatcher.prototype.gotFileSystemRoot):
* inspector/front-end/ResourcesPanel.js:
(WebInspector.FileSystemListTreeElement.prototype._fileSystemRemoved):

LayoutTests:

* http/tests/inspector/filesystem/get-filesystem-root-expected.txt: Added.
* http/tests/inspector/filesystem/get-filesystem-root.html: Added.

Canonical link: https://commits.webkit.org/107312@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120702 268f45cc-cd09-0410-ab3c-d52691b4dbfc